# fresca-catalog

./: README.md  base_catalog.yml  environment.yml  example.ipynb  fresca_catalog.py  full_catalog.yml  multiDataSetTemperatureMap.ipynb  pyproject.toml
datasets/: all_ctd.csv  sfer.csv
fresca_catalog/: catalog.py  plot.py  selector.py  summary.py  utils.py
